syntax = "proto3";

option go_package = "document-generators-infrastructure-repositories-contracts";

package Edm.DocumentGenerators.Infrastructure.Repositories.Contracts;

option csharp_namespace = "Edm.DocumentGenerators.Infrastructure.Repositories.Contracts";

import "Repositories/Documents/Contracts/Data/ApplicationEvents/DocumentNotifier/Requests/SendNotification/Notifications/Parameters/send_notification_document_notifier_request_notification_parameter.proto";

message SendNotificationDocumentNotifierRequestNotificationDb {
  string template_id = 1;
  repeated SendNotificationDocumentNotifierRequestNotificationParameterDb parameters = 2;
}
